# learning-rust

./: README.md
mars_calc/: README.md
mars_calc/src/: main.rs
memory_management/: README.md
memory_management/src/: main.rs
pyo3_test/: README.md  pyproject.toml
pyo3_test/src/: lib.rs  main.rs  state.rs
server/: README.md
server/public/: hello.html  index.html
server/src/: main.rs  server.rs
server/src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs  website_handler.rs
