[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3_test"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
authors = ["Eric Cotner <2.71828cotner@gmail.com>"]
description = ""
name = "pyo3_test"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
maturin = "^1.7.0"

